--- a/source/styles/main.scss
+++ b/source/styles/main.scss
@@ -13,6 +13,7 @@
 
 /* modules */
 @import "../modules/_ELEMENTS/social/social";
+@import "../modules/_ELEMENTS/address/address";
 
 @import "../modules/_GLOBAL/header/header";
 @import "../modules/_GLOBAL/footer/footer";
