--- a/source/modules/_SECTIONS/hero/hero.scss
+++ b/source/modules/_SECTIONS/hero/hero.scss
@@ -1,7 +1,6 @@
 .hero {
   &__inner {
     display: flex;
-
     gap: 60px;
   }
 
@@ -9,6 +8,10 @@
     max-width: 730px;
     display: flex;
     align-items: center;
+
+    @media (max-width: $tablets) {
+      width: 100%;
+    }
   }
 
   &__hand {
@@ -21,6 +24,10 @@
     position: relative;
     max-width: 300px;
     overflow: hidden;
+
+    @media (max-width: $tablets) {
+      display: none;
+    }
 
     &::after {
       content: "Фото какого то мужика";
