--- a/source/modules/_ELEMENTS/address/address.scss
+++ b/source/modules/_ELEMENTS/address/address.scss
@@ -1,7 +1,7 @@
 .address {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 
   &__link {
     font-size: 24px;
@@ -9,6 +9,14 @@
     align-items: center;
     gap: 8px;
     transition: color 0.3s;
+
+    @media (max-width: $tablets) {
+      font-size: 15px;
+    }
+
+    @media (max-width: $phones-md) {
+      font-size: 0;
+    }
 
     @media (hover: hover) and (pointer: fine) {
       &:hover {
