--- a/source/modules/_SECTIONS/projects/projects.scss
+++ b/source/modules/_SECTIONS/projects/projects.scss
@@ -31,6 +31,10 @@
   flex-direction: column;
   height: 100%;
 
+  @media (max-width: $phones-md) {
+    padding: 15px;
+  }
+
   &::after {
     content: "";
     position: absolute;
@@ -41,6 +45,10 @@
     z-index: -1;
     opacity: 0.2;
     transition: opacity 0.3s;
+
+    @media (max-width: $phones-md) {
+      border-radius: 20px 0;
+    }
   }
 
   &:hover::after {
