--- a/source/styles/_service/reset.scss
+++ b/source/styles/_service/reset.scss
@@ -17,7 +17,7 @@ body {
   position: relative;
   margin: 0;
   padding: 0;
-  font-family: $ff-open-sans;
+  font-family: sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -80,8 +80,6 @@ select {
   font: inherit;
   letter-spacing: inherit;
 }
-
-
 
 address {
   font-style: normal;
