--- a/source/modules/_SECTIONS/hero/hero.scss
+++ b/source/modules/_SECTIONS/hero/hero.scss
@@ -22,6 +22,7 @@
 
   &__img-box {
     position: relative;
+    width: 100%;
     max-width: 300px;
     overflow: hidden;
 
@@ -30,7 +31,7 @@
     }
 
     &::after {
-      content: "Фото какого то мужика";
+      content: "это не я 😊";
       position: absolute;
       top: 0;
       left: 0;
@@ -53,7 +54,7 @@
 
   &__img {
     filter: grayscale(100%);
-
+    width: 100%;
     opacity: 0.2;
   }
 }
